objects/ASI_CRM_Anti_Bribery__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AccumValueHospiPerRecipient__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accum value of Hospitality per recipient</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AccumValueOfGiftsPerRecipient__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accum value of Gifts per recipient</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Accum_Value_per_Recipient__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accum Value per Recipient</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Apparent_Value__c</fullName>
        <label>Actual/Apparent Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Apparent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer 1 : Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Answer_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer 2 : Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Answer_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer 3 : Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approval_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_Submission_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Submission Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Business_Purpose_Justification__c</fullName>
        <label>Business Purpose/Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Confirmation2__c</fullName>
        <defaultValue>&apos;Within 1 month prior to or after the completion of a competitive bid of tender&apos;+BR()+&apos;在竞标或投标之前或之后一个月以内&apos;</defaultValue>
        <label>Confirmation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Confirmation__c</fullName>
        <defaultValue>&apos;Contract term &gt; 12 months and within 3 months prior to or after the completion of a competitive bid of tender, OR&apos;
 + BR() +
&apos;Contract term &lt;= 12 months and within 1 months prior to or after the completion of a competitive bid of tender.&apos;
+ BR() +
&apos;在竞标或投标（合约期大于12个月）之前或之后三个月以内, 或&apos;
+ BR() +
&apos;在竞标或投标（合约期不超过12个月）之前或之后1个月以内&apos;</defaultValue>
        <label>Confirmation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <inlineHelpText>For General:
1.Business Meal 商务宴请
2.XX Branded Pen XX品牌钢笔, etc.
For Receiving Cash type:
1.xx branded gift card xx品牌礼品卡
2.xx branded jewellery xx品牌首饰</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DynamicApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DynamicApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FixApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FixApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_If_trips_provide_more_info__c</fullName>
        <label>If offering trips,pls provide more info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Name_of_Organization__c</fullName>
        <inlineHelpText>Please input complete organization name, do not use abbreviation</inlineHelpText>
        <label>Name of Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Nature__c</fullName>
        <label>Nature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Nature_of_Report__c</fullName>
        <label>Nature of Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-approval</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Notification_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Anti_Bribery8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offeror_Name__c</fullName>
        <inlineHelpText>Please input complete name of offeror: First name/Last name. If there are several offerors, please upload a name list as an attachment, including required information such as offeror name, position/department and organization name</inlineHelpText>
        <label>Offeror Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offeror_Position__c</fullName>
        <label>Offeror Position/Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Proposed_Date_of_Offering__c</fullName>
        <label>(Proposed) Date of Offering</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Proposed_Date_of_Received__c</fullName>
        <label>(Proposed) Date of Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Q1_IF_yes_provide_details__c</fullName>
        <label>Q1: IF yes, provide details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Q2_IF_yes_provide_details__c</fullName>
        <label>Q2: IF yes, provide details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Q3_IF_yes_provide_details__c</fullName>
        <label>Q3: IF yes, provide details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Question_1__c</fullName>
        <defaultValue>&apos;Are you aware of any current, proposed or anticipated business between Pernod Ricard China and the Public Official or the organization which he/she works for or represents?&apos; + BR() +&apos;本公司和接受人或其工作或代表的组织之间有当前拟定或预测业务吗?&apos;</defaultValue>
        <label>Question 1 :</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Question_2__c</fullName>
        <defaultValue>&apos;Does the Public Official have authority to award future contracts to, approve licences and/or examine or regulate Pernod Ricard China?&apos;+BR()+&apos;接受人拥有授予未来合同批准许可和/或审查或兼管本公司的权力吗?&apos;</defaultValue>
        <label>Question 2 :</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Question_3__c</fullName>
        <defaultValue>&apos;Are you aware of any transaction, contract examination finding or other business activity involving Pernod Ricard China before the Public Official?&apos;+BR()+&apos;存在提请接受人审核且涉及本公司的交易合同检查结果或者其他业务活动吗?&apos;</defaultValue>
        <label>Question 3 :</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recipient_Name__c</fullName>
        <inlineHelpText>Please input complete name of recipient: First name/Last name. If there are several recipients, please upload a name list as an attachment, including required information such as recipient name, position/department and organization name</inlineHelpText>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Recipient_Position__c</fullName>
        <label>Recipient Position/Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>TEXT(Owner:User.ASI_CRM_Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reporting_Item__c</fullName>
        <label>Reporting Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Trip</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cash Equivalent</fullName>
                </value>
                <value>
                    <fullName>Charitable Donation</fullName>
                </value>
                <value>
                    <fullName>Sponsorship/Community Project</fullName>
                </value>
                <value>
                    <fullName>Engagement of Lobbyists</fullName>
                </value>
                <value>
                    <fullName>Trips (Not Travelling Together)</fullName>
                </value>
                <value>
                    <fullName>Trips (Travelling Together)</fullName>
                </value>
                <value>
                    <fullName>Political Donation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Section_Description2__c</fullName>
        <defaultValue>&apos;Other Gifts, Hospitality, trips, donations, etc. to the same individual and / or organization during the current financial year (as known):&apos;+BR()+&apos;本财年给与同一接受人的其他礼品,招待,旅行,捐赠等的性质和价值(已知)&apos;</defaultValue>
        <label>Section Description:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Section_Description__c</fullName>
        <defaultValue>&apos;Other Hospitality (including Trips) from any third party during the current financial year (as known):&apos;
+BR()+&apos;本财年从该赠与人得到的其他招待(含同行的旅行)等的性质和价值(已知)&apos;</defaultValue>
        <label>Section Description:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Special_Reason__c</fullName>
        <label>Special Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Anti_Bribery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Anti_Bribery1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Anti_Bribery2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Value_Per_Recipient__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Value refers to market retail price 价值参考市场零售价</inlineHelpText>
        <label>Value Per Recipient Per Occasion</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Warnign_Msg__c</fullName>
        <defaultValue>&apos;You should not accept or agree to receive Gifts in cash or cash equivalents (e.g., cash cards, shopping cards, Gift vouchers or jewellery). However, if you received Gifts in cash or cash equivalents and you were not in a position to refuse them, you should report to your Line Manager who will report to the Department Head and transmit the Gifts to the Finance Director.&apos;
+BR()+
&apos;你不能接受或同意接受现金或现金等价物的礼物（例如，现金卡、购物卡、礼品券或珠宝）。但是，如果你在无法拒绝的情况下收到现金或现金等价物的礼物，你应当报告你的直属经理，他会报告部门主管，并把礼物交给财务总监。&apos;</defaultValue>
        <label>.</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Within_3_Month__c</fullName>
        <label>.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract term &gt; 12 months and within 3 months prior to or after the completion of a competitive bid of tender</fullName>
                </value>
                <value>
                    <fullName>Contract term &lt;= 12 months and within 1 months prior to or after the completion of a competitive bid of tender</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Anti-Bribery Request</label>
    <nameField>
        <displayFormat>AB-{0000000}</displayFormat>
        <label>AB Policy Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anti-Bribery Request</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Offering_Non_PO</fullName>
        <active>true</active>
        <description>non-PO means non-public officials, PO指政府官员</description>
        <label>CN Offering Non-PO</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Offering_Non_PO_RO</fullName>
        <active>true</active>
        <label>CN Offering Non-PO(RO)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Offering_PO_excl_FP</fullName>
        <active>true</active>
        <description>PO means public officials, PO指政府官员</description>
        <label>CN Offering PO</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Offering_PO_excl_FP_RO</fullName>
        <active>true</active>
        <label>CN Offering PO(RO)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Receiving_Cash</fullName>
        <active>true</active>
        <description>including cash and cash equivalent 此处包括现金和现金等价物</description>
        <label>CN Receiving Cash</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Receiving_Cash_RO</fullName>
        <active>true</active>
        <label>CN Receiving Cash(RO)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Receiving_G_non_cash_H</fullName>
        <active>true</active>
        <description>此处适用于非现金的礼品和招待。</description>
        <label>CN Receiving Gift (Non-cash) &amp; Hospitality</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Receiving_G_non_cash_H_RO</fullName>
        <active>true</active>
        <label>CN Receiving G(non cash)&amp;H(RO)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_CheckReportNature_Receiving_G</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (RecordType.DeveloperName == &apos;ASI_CRM_CN_Receiving_G_non_cash_H&apos;) &amp;&amp;   ISPICKVAL(ASI_CRM_Reporting_Item__c, &apos;Trip&apos;) &amp;&amp;  NOT(ISPICKVAL( ASI_CRM_Nature_of_Report__c , &apos;Pre-approval&apos;)), True, false)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Nature_of_Report__c</errorDisplayField>
        <errorMessage>Pre-Approval is required for Trip.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_NatureValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_CN&apos;) &amp;&amp;  ( ASI_CRM_AccumValueOfGiftsPerRecipient__c &gt; 0 ||  ASI_CRM_AccumValueHospiPerRecipient__c  &gt; 0 ||  ASI_CRM_Accum_Value_per_Recipient__c  &gt; 0 ) &amp;&amp;   ( ISBLANK(ASI_CRM_Nature__c) ||  ISNULL(ASI_CRM_Nature__c) ), True, False)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Nature__c</errorDisplayField>
        <errorMessage>Nature is required for Accumulate Value greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Question1_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName =&apos;ASI_CRM_CN_Offering_PO_excl_FP&apos; &amp;&amp; ASI_CRM_Answer_1__c == True &amp;&amp; ( ISBLANK( ASI_CRM_Q1_IF_yes_provide_details__c ) ||  ISNULL( ASI_CRM_Q1_IF_yes_provide_details__c )), True, False )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Q1_IF_yes_provide_details__c</errorDisplayField>
        <errorMessage>Please fill in details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Question2_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName =&apos;ASI_CRM_CN_Offering_PO_excl_FP&apos; &amp;&amp; ASI_CRM_Answer_2__c == True &amp;&amp;  (ISBLANK( ASI_CRM_Q2_IF_yes_provide_details__c ) ||  ISNULL( ASI_CRM_Q2_IF_yes_provide_details__c )), True, False )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Q2_IF_yes_provide_details__c</errorDisplayField>
        <errorMessage>Please fill in details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_CN_Question3_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName =&apos;ASI_CRM_CN_Offering_PO_excl_FP&apos; &amp;&amp; ASI_CRM_Answer_3__c == True &amp;&amp;  (ISBLANK( ASI_CRM_Q3_IF_yes_provide_details__c ) ||  ISNULL( ASI_CRM_Q3_IF_yes_provide_details__c )), True, False )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Q3_IF_yes_provide_details__c</errorDisplayField>
        <errorMessage>Please fill in details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_TripDetail_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName == &apos;ASI_CRM_CN_Offering_PO_excl_FP&apos; &amp;&amp; (ISPICKVAL(ASI_CRM_Reporting_Item__c, &apos;Trips (Not Travelling Together)&apos;) || ISPICKVAL(ASI_CRM_Reporting_Item__c, &apos;Trips (Travelling Together)&apos;) ) &amp;&amp; ( ISNULL( ASI_CRM_If_trips_provide_more_info__c ) ||  ISBLANK(ASI_CRM_If_trips_provide_more_info__c) ), True, False)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_If_trips_provide_more_info__c</errorDisplayField>
        <errorMessage>Please fill in details</errorMessage>
    </validationRules>
</CustomObject>